--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@stripe/stripe-js": "^2.4.0",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.0.1",
+    "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
     "git": "^0.1.5",
     "lucide-react": "^0.323.0",
+    "mangodb": "^1.0.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "next": "14.1.0",
@@ -32,10 +33,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
-    "stripe": "^14.16.0",
+    "stripe": "^14.23.0",
     "svix": "^1.21.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "whatwg-url": "^14.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
